<resources>
    <string name="app_name">Text recognition test app</string>
    <string name="take_picture_cloud">Cloud</string>
    <string name="take_picture_device">Device</string>
    <string name="recognized_text">Recognized text:</string>
    <string name="recognition_meta_data">Meta data:</string>
    <string name="choose_the_ocr_recognition_type">Choose the OCR recognition type</string>
    <string name="metadata">Metadata:</string>
    <string name="receipt_ocr">Receipt OCR</string>
    <string name="title_activity_receipt_ocr">ReceiptOcrActivity</string>
    <string name="title_activity_amount_ocr">AmountOcrActivity</string>
    <string name="camera">Camera</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="total_amount">Total amount</string>
    <string name="address">Address</string>
    <string name="pick_up_text">Pick up text</string>
    <string name="icon_to_show_the_selection_app">Icon to show the selection app</string>
    <string name="cancel_choice">Cancel choice</string>
    <string name="confirm_choice">Confirm choice</string>
    <string name="camera_activation">Camera activation</string>
    <string name="activate_text_pick_up">Activate text pick up</string>
  <string name="amount_ocr">Amount OCR</string>
    <string name="amount">Amount</string>
  <string name="ok">OK</string>
</resources>
