<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ReceiptOcrActivity"
    tools:showIn="@layout/activity_receipt_ocr">

    <ImageView
        android:id="@+id/cameraActivationButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/camera_activation"
        android:src="@drawable/ic_camera_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/total_amount"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="289dp"
        android:layout_height="141dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <ImageView
        android:id="@+id/pickupButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/activate_text_pick_up"
        android:src="@drawable/ic_textsms_grey"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/nameSearch"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/icon_to_show_the_selection_app"
        android:focusable="true"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@+id/addressEditText"
        app:layout_constraintStart_toEndOf="@+id/nameEditText" />

    <ImageView
        android:id="@+id/addressSearch"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/icon_to_show_the_selection_app"
        android:focusable="true"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@+id/dateEditText"
        app:layout_constraintStart_toEndOf="@+id/addressEditText" />

    <ImageView
        android:id="@+id/dateSearch"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/icon_to_show_the_selection_app"
        android:focusable="true"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@+id/amountEditText"
        app:layout_constraintStart_toEndOf="@+id/dateEditText" />

    <ImageView
        android:id="@+id/amountSearch"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/icon_to_show_the_selection_app"
        android:focusable="true"
        android:src="@drawable/ic_search"
        app:layout_constraintStart_toEndOf="@+id/amountEditText"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

    <ProgressBar
        android:id="@+id/ocrProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="159dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:progressDrawable="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>